--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Navbar</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Navbar</h1><small>檔名：<code>navbar.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Navbar</h1><small > 檔名：<code>navbar.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>結構說明：</h2>
+<h2> 結構說明：</h2>
 
-<p>外層</p>
+<p> 外層 </p>
 
 <ul>
-  <li>navbar 最外導覽列結構</li>
-  <li>navbar-expand-{中斷點} 選單內容展開中斷點</li>
-  <li>navbar-{dark, light}，亮暗色切換</li>
+  <li>navbar 最外導覽列結構 </li>
+  <li>navbar-expand-{中斷點} 選單內容展開中斷點 </li>
+  <li>navbar-{dark, light}，亮暗色切換 </li>
 </ul>
 
-<p>內層</p>
+<p> 內層 </p>
 
 <ul>
   <li><code>.navbar-brand</code> 用於您的公司，產品或專案名稱。</li>
@@ -21,7 +21,7 @@
   <li>Flex 與 spacing 通用類別，用於表單控制與行為。</li>
   <li><code>.navbar-text</code> 用於垂直居中的文本字串。</li>
   <li><code>.collapse.navbar-collapse</code> 透過父層斷點來群組、隱藏導覽列內容。</li>
-  <li>加入一個選填的屬性 <code>.navbar-scroll</code> 來設置 <code>max-height</code> ，然後 <a href="#scrolling">滾動展開內容</a>.</li>
+  <li> 加入一個選填的屬性 <code>.navbar-scroll</code> 來設置 <code>max-height</code> ，然後 <a href="#scrolling"> 滾動展開內容 </a>.</li>
 </ul>
 
 <div class="demo">
@@ -64,29 +64,29 @@
 </div>
 
 <h2>Brand</h2>
-<p><code>.navbar-brand</code> 可以應用於大多數元素，但對錨點最有效，因為某些元素可能需要通用類別 Class 或自訂樣式</p>
+<p><code>.navbar-brand</code> 可以應用於大多數元素，但對錨點最有效，因為某些元素可能需要通用類別 Class 或自訂樣式 </p>
 
 <h4>Text</h4>
 
-<p>為以下程式碼加入 .navbar-brand</p>
+<p> 為以下程式碼加入 .navbar-brand</p>
 
 <div class="demo">
   <!-- As a link -->
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="練習" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navbar</a>
     </div>
   </nav>
   <!-- As a heading -->
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <span class="練習 mb-0 h1">Navbar</span>
+      <span class="navbar-brand mb-0 h1">Navbar</span>
     </div>
   </nav>
 </div>
 
 <h4>Image</h4>
-<p>可以將 <code>.navbar-brand</code> 中的文字替換為 <code>&lt;img&gt;</code></p>
+<p> 可以將 <code>.navbar-brand</code> 中的文字替換為 <code>&lt;img&gt;</code></p>
 
 <div class="demo">
   <nav class="navbar navbar-light bg-light">
@@ -100,12 +100,12 @@
 
 
 <h2>Nav</h2>
-<p><b>在導覽列中的導覽元件會盡可能的佔用水平空間</b>，以保持您的導覽列內容安全對齊。</p>
+<p><b > 在導覽列中的導覽元件會盡可能的佔用水平空間 </b>，以保持您的導覽列內容安全對齊。</p>
 
-<p>結構：</p>
+<p> 結構：</p>
 
 <ul>
-  <li>最外層：navbar-nav</li>
+  <li> 最外層：navbar-nav</li>
   <li>li：nav-item</li>
   <li>a：nav-link</li>
 </ul>
@@ -118,12 +118,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="練習">
-          <li class="練習">
-            <a class="練習 active" aria-current="page" href="#">Home</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="練習">
-            <a class="練習" href="#">Features</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -137,9 +137,9 @@
   </nav>
 </div>
 
-<p>導覽有專屬的類別，依照需求你可以避免完全使用列表的方法，也可不使用 .nav-item</p>
+<p> 導覽有專屬的類別，依照需求你可以避免完全使用列表的方法，也可不使用 .nav-item</p>
 
-<p>在以下範例中加入 navbar-nav, nav-link</p>
+<p> 在以下範例中加入 navbar-nav, nav-link</p>
 
 <div class="demo">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -149,9 +149,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="練習">
-          <a class="練習 active" aria-current="page" href="#">Home</a>
-          <a class="練習" href="#">Features</a>
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
           <a class="nav-link" href="#">Pricing</a>
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </div>
@@ -160,9 +160,9 @@
   </nav>
 </div>
 
-<p>還可以在導覽列的導覽元件使用下拉式選單。下拉式選單需要一個包裝元素進行定位，請確保為 <code>.nav-item</code> 和 <code>.nav-link</code> 使用單獨及巢狀的元素</p>
+<p> 還可以在導覽列的導覽元件使用下拉式選單。下拉式選單需要一個包裝元素進行定位，請確保為 <code>.nav-item</code> 和 <code>.nav-link</code> 使用單獨及巢狀的元素 </p>
 
-<p>在以下結構中加入 data-bs-toggle="dropdown"</p>
+<p> 在以下結構中加入 data-bs-toggle="dropdown"</p>
 
 <div class="demo">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -183,7 +183,7 @@
             <a class="nav-link" href="#">Pricing</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" 練習 aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown link
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -202,21 +202,21 @@
 
 <p><code>.navbar</code> 中的直接子元素使用 flex 排版，預設為 <code>justify-content: space-between</code>。 根據需要使用其他 <a href="https://bootstrap5.hexschool.com/docs/5.0/utilities/flex/">flex utilities</a> 來調整此行為。</p>
 
-<p>打開以下註解查看表單的位置</p>
+<p> 打開以下註解查看表單的位置 </p>
 
 <div class="demo">
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand">Navbar</a>
-      <!-- <form class="d-flex">
+      <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
+      </form>
     </div>
   </nav>
 </div>
 
-<p>input 群組也可以這樣使用。如果導覽列整個都是表單，或者大部分是表單，則可以使用 <code>&lt;form>&gt;</code> 元素作為容器並保存 HTML</p>
+<p>input 群組也可以這樣使用。如果導覽列整個都是表單，或者大部分是表單，則可以使用 <code>&lt;form&gt;</code> 元素作為容器並保存 HTML</p>
 
 <div class="demo">
   <nav class="navbar navbar-light bg-light">
@@ -230,7 +230,7 @@
 </div>
 
 <h2>Text</h2>
-<p>透過 <code>.navbar-text</code> 導覽列可以包含一些文本</p>
+<p> 透過 <code>.navbar-text</code> 導覽列可以包含一些文本 </p>
 
 <div class="demo">
   <nav class="navbar navbar-light bg-light">
@@ -242,11 +242,11 @@
   </nav>
 </div>
 
-<h2>色彩方案</h2>
-<p>從 <code>.navbar-light</code> 選用淺色背景顏色，或者 <code>.navbar-dark</code> 用於深色背景顏色。 然後，使用 <code>.bg-*</code> 通用類別自訂</p>
+<h2> 色彩方案 </h2>
+<p> 從 <code>.navbar-light</code> 選用淺色背景顏色，或者 <code>.navbar-dark</code> 用於深色背景顏色。 然後，使用 <code>.bg-*</code> 通用類別自訂 </p>
 
 <div class="demo">
-  <nav class="navbar navbar-expand-lg 練習 bg-dark mb-3">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBgdark" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -276,7 +276,7 @@
   </nav>
   
   <!-- 為以下範例套用 bg-primary -->
-  <nav class="navbar navbar-expand-lg  練習 bg-primary mb-3">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBgprimary" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -306,7 +306,7 @@
   </nav>
   
   <!-- 為以下範例套用 style="background-color: #e3f2fd;" -->
-  <nav class="navbar navbar-expand-lg  navbar-light" 練習>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBglight" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -337,7 +337,7 @@
 </div>
 
 <h2>Containers</h2>
-<p>可以把導覽列包裝在 <code>.container</code> 中，將其置中於頁面 - 請注意，內部的 container 還是必要的。或是你可以在 <code>.navbar</code> 中包裝一個 container</p>
+<p> 可以把導覽列包裝在 <code>.container</code> 中，將其置中於頁面 - 請注意，內部的 container 還是必要的。或是你可以在 <code>.navbar</code> 中包裝一個 container</p>
 
 <div class="demo mx-n5">
   <div class="container">
@@ -349,7 +349,7 @@
   </div>
 </div>
 
-<p>使用任意響應式容器以更改導覽列中內容的顯示寬度</p>
+<p> 使用任意響應式容器以更改導覽列中內容的顯示寬度 </p>
 
 <div class="demo mx-n5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -360,9 +360,9 @@
 </div>
 
 <h2>Placement</h2>
-<p>固定的導覽列使用 <code>position：fixed</code>，這意味著它們會脫離正常的 DOM 的文件流，並且可能需要自定義 CSS（例如 <code>&lt;body&gt;</body></code> 上的 <code>padding-top</code>），以防止與其他元素重疊。
-<br><br>還要注意 <code>.sticky-top</code> 使用 <code>position：sticky</code>，<a href="https://caniuse.com/css-sticky"><b>並沒有被所有瀏覽器支持</b></a></p>
-
+<p> 固定的導覽列使用 <code>position：fixed</code>，這意味著它們會脫離正常的 DOM 的文件流，並且可能需要自定義 CSS（例如 <code>&lt;body&gt;</body></code> 上的 <code>padding-top</code>），以防止與其他元素重疊。
+<br><br > 還要注意 <code>.sticky-top</code> 使用 <code>position：sticky</code>，<a href="https://caniuse.com/css-sticky"><b > 並沒有被所有瀏覽器支持 </b></a></p>
+<!-- 內容可能因為使用 fixed-top 而被這塊給蓋住，記得對 body 使用 padding-top，至於要 padding 多少，取決於 navbar 多大 -->
 <div class="demo" style="padding: 24px;">
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -371,12 +371,12 @@
   </nav>
 </div>
 
-<h2>滾動效果</h2>
+<h2> 滾動效果 </h2>
 
-<p>行動版選單可透過設置 <code>--bs-scroll-height: 100px;</code> 為行動版的下拉選單限制高度，並維持滾動的效果</p>
+<p> 行動版選單可透過設置 <code>--bs-scroll-height: 100px;</code> 為行動版的下拉選單限制高度，並維持滾動的效果 </p>
 
 <div class="demo">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="--bs-scroll-height: 100px;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar scroll</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -415,16 +415,16 @@
 </div>
 
 <h2>Responsive behaviors</h2>
-<p>可以使用 <code>.navbar-toggler, .navbar-collapse</code> 和 <code>.navbar-expand{-sm|-md|-lg|-xl}</code> 決定它們的內容何時會摺疊</p>
-<p>對於不需要折疊的導覽列，在導覽列中加入 <code>.navbar-expand</code>。對於總是折疊的導覽列，不要加任何 <code>.navbar-expand</code> class</p>
+<p> 可以使用 <code>.navbar-toggler, .navbar-collapse</code> 和 <code>.navbar-expand {-sm|-md|-lg|-xl}</code> 決定它們的內容何時會摺疊 </p>
+<p> 對於不需要折疊的導覽列，在導覽列中加入 <code>.navbar-expand</code>。對於總是折疊的導覽列，不要加任何 <code>.navbar-expand</code> class</p>
 
 <h4>Toggler</h4>
-<p>在最小中斷點沒有 <code>.navbar-brand</code>：</p>
+<p> 在最小中斷點沒有 <code>.navbar-brand</code>：</p>
 
-<p>在以下程式碼中加入 .navbar-expand-lg，.navbar-collapse 將會在 lg 以上尺寸展開</p>
+<p> 在以下程式碼中加入 .navbar-expand-lg，.navbar-collapse 將會在 lg 以上尺寸展開 </p>
 
 <div class="demo">
-  <nav class="navbar 練習 navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -453,15 +453,9 @@
 
 <h4>External content</h4>
 
-<p>可以使用 data-bs-target 展開 navbar 上方的額外內容</p>
+<p> 可以使用 data-bs-target 展開 navbar 上方的額外內容 </p>
 
 <div class="demo">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <h5 class="text-white h4">Collapsed content</h5>
-      <span class="text-muted">Toggleable via the navbar brand.</span>
-    </div>
-  </div>
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -469,6 +463,12 @@
       </button>
     </div>
   </nav>
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h5 class="text-white h4">Collapsed content</h5>
+      <span class="text-muted">Toggleable via the navbar brand.</span>
+    </div>
+  </div>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -651,7 +651,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -664,7 +664,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -692,7 +692,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
