--- a/components/offcanvas.html
+++ b/components/offcanvas.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Offcanvas</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Offcanvas</h1><small>檔名：<code>offcanvas.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Offcanvas</h1><small > 檔名：<code>offcanvas.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Examples</h2>
 
 <h4>Offcanvas components</h4>
 
-<p>offcanvas 是從畫面側邊出現的元件，透過 JS 來切換期顯示與否</p>
+<p>offcanvas 是從畫面側邊出現的元件，透過 JS 來切換期顯示與否 </p>
 
 <ul>
-  <li>外層包含 offcanvas, offcanvas-start，start, end, top, bottom 決定顯示方向</li>
-  <li>必須給予一個特定 id</li>
-  <li>內層包含 offcanvas-header, offcanvas-body, offcanvas-title 等樣式</li>
+  <li> 外層包含 offcanvas, offcanvas-start，start, end, top, bottom 決定顯示方向 </li>
+  <li> 必須給予一個特定 id</li>
+  <li> 內層包含 offcanvas-header, offcanvas-body, offcanvas-title 等樣式 </li>
 </ul>
 
 <div class="demo">
@@ -29,15 +29,15 @@
 <h4>Live demo</h4>
 
 <ul>
-  <li>為按鈕加上 data-bs-toggle="offcanvas"</li>
-  <li>使用 href 或 data-bs-target 指向 offcanvas id</li>
+  <li> 為按鈕加上 data-bs-toggle="offcanvas"</li>
+  <li> 使用 href 或 data-bs-target 指向 offcanvas id</li>
 </ul>
 
 <div class="demo">
-  <a class="btn btn-primary" data-bs-toggle="offcanvas" 練習 role="button" aria-controls="offcanvasExample">
+  <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
     Link with href
   </a>
-  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" 練習 aria-controls="offcanvasExample">
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"  data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
     Button with data-bs-target
   </button>
   
@@ -66,12 +66,12 @@
 
 <h2>Placement</h2>
 
-<p>試著加入 offcanvas-top, offcanvas-bottom, offcanvas-end 查看其方向性</p>
+<p> 試著加入 offcanvas-top, offcanvas-bottom, offcanvas-end 查看其方向性 </p>
 
 <div class="demo">
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Toggle top offcanvas</button>
 
-  <div class="offcanvas 練習" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
     <div class="offcanvas-header">
       <h5 id="offcanvasTopLabel">Offcanvas top</h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -84,12 +84,12 @@
 
 <h2>Backdrop</h2>
 
-<p>可以使用 data-bs-scroll="true" 在 offcanvas 開啟時維持背景滾動，使用 data-bs-backdrop="false" 關閉覆蓋的背景色。</p>
-
+<p> 可以使用 data-bs-scroll="true" 在 offcanvas 開啟時維持背景滾動，使用 data-bs-backdrop="false" 關閉覆蓋的背景色。</p>
+<!-- data-bs-scroll="true" 展開的畫布下的原始內容可以移動 -->
 <div class="demo">
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Enable body scrolling</button>
 
-  <div class="offcanvas offcanvas-start" 練習 tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Colored with scrolling</h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -280,7 +280,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -293,7 +293,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -321,7 +321,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
