--- a/components/pagination.html
+++ b/components/pagination.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Pagination</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Pagination</h1><small>檔名：<code>pagination.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Pagination</h1><small > 檔名：<code>pagination.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Overview</h2>
-<p>在外層使用 <code>&lt;nav&gt;</nav></code> 元素讓螢幕閱讀器和其他輔助技術用來識別為導航區塊</p>
+<p> 在外層使用 <code>&lt;nav&gt;</nav></code> 元素讓螢幕閱讀器和其他輔助技術用來識別為導航區塊 </p>
 
-<p>分頁結構</p>
+<p> 分頁結構 </p>
 
 <ul>
-  <li>外層 nav 標籤</li>
+  <li> 外層 nav 標籤 </li>
   <li>ul 使用 .pagination</li>
   <li>li 使用 .page-item</li>
   <li>a 使用 .page-link</li>
@@ -16,9 +16,9 @@
 
 <div class="demo">
   <nav aria-label="Page navigation example">
-    <ul class="練習">
-      <li class="練習"><a class="練習" href="#">Previous</a></li>
-      <li class="練習"><a class="練習" href="#">1</a></li>
+    <ul class="pagination">
+      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
       <li class="page-item"><a class="page-link" href="#">2</a></li>
       <li class="page-item"><a class="page-link" href="#">3</a></li>
       <li class="page-item"><a class="page-link" href="#">Next</a></li>
@@ -27,16 +27,16 @@
 </div>
 
 <h2>Disabled and active states</h2>
-<p>使用 <code>.disabled</code> 來顯示禁用狀態、 <code>.active</code> 顯示當前頁數</p>
+<p> 使用 <code>.disabled</code> 來顯示禁用狀態、 <code>.active</code> 顯示當前頁數 </p>
 
 <div class="demo">
   <nav aria-label="...">
     <ul class="pagination">
-      <li class="page-item 練習">
+      <li class="page-item disabled">
         <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
       </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item 練習" aria-current="page">
+      <li class="page-item active"><a class="page-link" href="#">1</a></li>
+      <li class="page-item aria-current="page">
         <a class="page-link" href="#">2</a>
       </li>
       <li class="page-item"><a class="page-link" href="#">3</a></li>
@@ -47,7 +47,7 @@
   </nav>
 </div>
 
-<p>您可以選擇將 active 或 disabled 的錨點改為 <code>&lt;span&gt;</nav></code>，或是在上一個/下一個箭頭的情況下，省略連結以刪除點擊功能，在保留預期樣式的同時防止鍵盤 focus</p>
+<p> 您可以選擇將 active 或 disabled 的錨點改為 <code>&lt;span&gt;</nav></code>，或是在上一個 / 下一個箭頭的情況下，省略連結以刪除點擊功能，在保留預期樣式的同時防止鍵盤 focus</p>
 
 <div class="demo">
   <nav aria-label="...">
@@ -69,11 +69,11 @@
 
 <h2>Sizing</h2>
 
-<p>使用 pagination-lg, pagination-sm 改變大小</p>
+<p> 使用 pagination-lg, pagination-sm 改變大小 </p>
 
 <div class="demo">
   <nav aria-label="...">
-    <ul class="pagination 練習">
+    <ul class="pagination pagination-lg">
       <li class="page-item active" aria-current="page">
         <span class="page-link">1</span>
       </li>
@@ -85,7 +85,7 @@
 
 <div class="demo">
   <nav aria-label="...">
-    <ul class="pagination 練習">
+    <ul class="pagination pagination-sm">
       <li class="page-item active" aria-current="page">
         <span class="page-link">1</span>
       </li>
@@ -97,11 +97,11 @@
 
 <h2>Alignment</h2>
 
-<p>使用 Utilities 進行對分頁對齊（置中、置右）</p>
+<p> 使用 Utilities 進行對分頁對齊（置中、置右）</p>
 
 <div class="demo">
   <nav aria-label="Page navigation example">
-    <ul class="pagination 練習">
+    <ul class="pagination justify-content-center">
       <li class="page-item disabled">
         <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
       </li>
@@ -296,7 +296,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -309,7 +309,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -337,7 +337,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
