--- a/components/popovers.html
+++ b/components/popovers.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Popovers</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Popovers</h1><small>檔名：<code>popovers.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Popovers</h1><small > 檔名：<code>popovers.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Example</h2>
 
-<p>注意：Popovers 預設是不會啟用的！</p>
+<p> 注意：Popovers 預設是不會啟用的！</p>
 
-<p>使用 Popover 在專案中：</p>
+<p> 使用 Popover 在專案中：</p>
 
 <ul>
-  <li>元素加入：data-bs-toggle="popover"</li>
-  <li>title 屬性加入標題</li>
-  <li>data-bs-content="..." 加入內文</li>
-  <li>加入相關 JavaScript（請放在 HTML 文件最後</li>
+  <li> 元素加入：data-bs-toggle="popover"</li>
+  <li>title 屬性加入標題 </li>
+  <li>data-bs-content="..." 加入內文 </li>
+  <li> 加入相關 JavaScript（請放在 HTML 文件最後 </li>
 </ul>
 
 <div class="demo">
-  <button type="button" class="btn btn-lg btn-danger" 練習>Click to toggle popover</button>
+  <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="我是標題" data-bs-content="我是內文～～">Click to toggle popover</button>
 </div>
 
 <h4>Four directions</h4>
 
-<p>使用 data-bs-placement 加入 top, right, bottom, left 改變呈現的方向</p>
+<p> 使用 data-bs-placement 加入 top, right, bottom, left 改變呈現的方向 </p>
 
 <div class="demo">
-  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="練習" data-bs-content="Top popover">
+  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
     Popover on top
   </button>
-  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="練習" data-bs-content="Right popover">
+  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
     Popover on right
   </button>
-  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="練習" data-bs-content="Bottom popover">
+  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
     Popover on bottom
   </button>
-  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="練習" data-bs-content="Left popover">
+  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
     Popover on left
   </button>
 </div>
 
 <h4>Dismiss on next click</h4>
-<p>點擊外部隱藏 Popover 可以加入 data-bs-trigger="focus"，注意：在此請使用 a 標籤搭配 tabindex="0"</p>
+<p> 點擊外部隱藏 Popover 可以加入 data-bs-trigger="focus"，注意：在此請使用 a 標籤搭配 tabindex="0"</p>
 
 <div class="demo">
-  <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" 練習 title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
+  <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
   <script>
     // 使用 JS 設定 popover 時，可改用以下程式碼
-    // var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
-    //   trigger: 'focus'
-    // })
+    var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
+      trigger: 'focus'
+    })
   </script>
 </div>
 
 <h4>Disabled elements</h4>
-<p>對於禁用的彈出提示框觸發，您可能傾向使用 <code>data-bs-trigger="hover focus"</code> 來直接為用戶提供視覺回饋，因為用戶預期不會去 <em>點擊</em> 禁用的元素</p>
+<p> 對於禁用的彈出提示框觸發，您可能傾向使用 <code>data-bs-trigger="hover focus"</code> 來直接為用戶提供視覺回饋，因為用戶預期不會去 <em > 點擊 </em> 禁用的元素 </p>
 
 <div class="demo">
-  <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" 練習 data-bs-content="Disabled popover">
+  <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
     <button class="btn btn-primary" type="button" disabled>Disabled button</button>
   </span>
 </div>
 
 <script>
-  // var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-  // var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-  //   return new bootstrap.Popover(popoverTriggerEl)
-  // })
+  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+    return new bootstrap.Popover(popoverTriggerEl)
+  })
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -247,7 +247,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -260,7 +260,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -288,7 +288,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
