--- a/components/scrollspy.html
+++ b/components/scrollspy.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Scrollspy</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Scrollspy</h1><small>檔名：<code>scrollspy.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Scrollspy</h1><small > 檔名：<code>scrollspy.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>How it works</h2>
 <ul>
-  <li>必須使用在 Bootstrap <a href="https://bootstrap5.hexschool.com/docs/5.0/components/navs-tabs/">導覽元件 nav</a> 或 <a href="https://bootstrap5.hexschool.com/docs/5.0/components/list-group/">列表群組 list group</a>.</li>
-  <li>滾動監控需要在被監控的元素上設定 <code>position: relative;</code>，通常是 <code>&lt;body&gt;</code>.</li>
-  <li>錨點 (<code>&lt;a&gt;</code>) 是必要的，且必須指向到該元素的 id.</li>
+  <li> 必須使用在 Bootstrap <a href="https://bootstrap5.hexschool.com/docs/5.0/components/navs-tabs/"> 導覽元件 nav</a> 或 <a href="https://bootstrap5.hexschool.com/docs/5.0/components/list-group/"> 列表群組 list group</a>.</li>
+  <li> 滾動監控需要在被監控的元素上設定 <code>position: relative;</code>，通常是 <code>&lt;body&gt;</code>.</li>
+  <li> 錨點 (<code>&lt;a&gt;</code>) 是必要的，且必須指向到該元素的 id.</li>
 </ul>
 
 <h2>Example in navbar</h2>
 
 <ul>
-  <li>被監控的結構需加上 <code>position-relative</code></li>
-  <li>被監控的元素加上 <code>data-bs-spy="scroll" data-bs-offset="0"</code>，並使用 data-bs-target 指向列表 id</li>
+  <li> 被監控的結構需加上 <code>position-relative</code></li>
+  <li> 被監控的元素加上 <code>data-bs-spy="scroll" data-bs-offset="0"</code>，並使用 data-bs-target 指向列表 id</li>
 </ul>
 
-<p>將 <code>data-bs-spy="scroll" data-bs-target="#navbar-example2"</code> 加入程式碼套用 scrollspy 的效果</p>
+<p> 將 <code>data-bs-spy="scroll" data-bs-target="#navbar-example2"</code> 加入程式碼套用 scrollspy 的效果 </p>
 
 <div class="demo">
   <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
@@ -39,7 +39,7 @@
       </li>
     </ul>
   </nav>
-  <div 練習 class="position-relative mt-2 overflow-auto" tabindex="0" style="height: 200px;">
+  <div data-bs-spy="scroll" data-bs-offset="0" data-bs-target="#navbar-example2" class="position-relative mt-2 overflow-auto" tabindex="0" style="height: 200px;">
     <h4 id="scrollspyHeading1">First heading</h4>
     <p>This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.</p>
     <h4 id="scrollspyHeading2">Second heading</h4>
@@ -54,7 +54,7 @@
 </div>
 
 <h2>Example with nested nav</h2>
-<p>滾動監控也適用於巢狀的 <code>.nav</code>。如果巢狀 <code>.nav</code> 是 <code>.active</code>, 它的父層也會是 <code>.active</code> 狀態</p>
+<p> 滾動監控也適用於巢狀的 <code>.nav</code>。如果巢狀 <code>.nav</code> 是 <code>.active</code>, 它的父層也會是 <code>.active</code> 狀態 </p>
 
 <div class="demo">
   <div class="row">
@@ -304,7 +304,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -317,7 +317,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -345,7 +345,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
