--- a/components/spinners.html
+++ b/components/spinners.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Spinners</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Spinners</h1><small>檔名：<code>spinners.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Spinners</h1><small > 檔名：<code>spinners.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Border spinner</h2>
 
-<p>使用 spinner-border 套用旋轉的讀取效果</p>
+<p> 使用 spinner-border 套用旋轉的讀取效果 </p>
 
 <div class="demo">
-  <div class="練習" role="status">
+  <div class="spinner-border" role="status">
+    <!-- 內部這個可有可無，但建議補上 會使語意比較完整 -->
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
 <h4>Colors</h4>
 
-<p>使用 text-{情境色} 來套用顏色</p>
-
+<p> 使用 text-{情境色} 來套用顏色 </p>
+<!-- 雖然使用的是 border 但改變顏色卻是 text -->
 <div class="demo">
-  <div class="spinner-border 練習" role="status">
+  <div class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
 
-<p>原理：顏色是使用 CSS 變數中的 currentColor 來套用文字色彩</p>
+<p> 原理：顏色是使用 CSS 變數中的 currentColor 來套用文字色彩 </p>
 
 <div class="demo">
   <style>
     .box {
       height: 100px;
       width: 100px;
-      /* background-color: currentColor; */
+      background-color: red;
     }
   </style>
   <div class="box text-primary">
@@ -40,18 +41,18 @@
 
 <h2>Growing spinner</h2>
 
-<p>使用 spinner-grow 放大的讀取效果</p>
+<p> 使用 spinner-grow 放大的讀取效果 </p>
 
 <div class="demo">
-  <div class="練習" role="status">
+  <div class="spinner-grow" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
-<p>使用 text-{情境色} 來套用顏色</p>
+<p> 使用 text-{情境色} 來套用顏色 </p>
 
 <div class="demo">
-  <div class="spinner-grow 練習" role="status">
+  <div class="spinner-grow text-danger" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
@@ -69,18 +70,18 @@
 
 <h4>Flex</h4>
 
-<p>水平置中</p>
+<p> 水平置中 </p>
 <div class="demo">
-  <div class="d-flex 練習">
+  <div class="d-flex justify-content-center">
     <div class="spinner-border" role="status">
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
 </div>
 
-<p>垂直置中</p>
+<p> 垂直置中 </p>
 <div class="demo">
-  <div class="d-flex 練習" style="height: 150px;">
+  <div class="d-flex align-items-center" style="height: 150px;">
     <strong>Loading...</strong>
     <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
   </div>
@@ -97,50 +98,50 @@
 </div>
 
 <h2>Size</h2>
-<p>增加 <code>.spinner-border-sm</code> 和 <code>.spinner-grow-sm</code> 製作一個較小的讀取圖示</p>
+<p> 增加 <code>.spinner-border-sm</code> 和 <code>.spinner-grow-sm</code> 製作一個較小的讀取圖示 </p>
 
 <div class="demo">
-  <div class="spinner-border 練習" role="status">
+  <div class="spinner-border spinner-border-sm" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
-  <div class="spinner-grow 練習" role="status">
+  <div class="spinner-grow spinner-grow-sm" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
-<p>使用自定義 CSS 或 inline 來根據需要更改尺寸，為以下元素加入 style="width: 3rem; height: 3rem;" 的程式碼</p>
+<p> 使用自定義 CSS 或 inline 來根據需要更改尺寸，為以下元素加入 style="width: 3rem; height: 3rem;" 的程式碼 </p>
 
 <div class="demo">
-  <div class="spinner-border" style="練習" role="status">
+  <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
-  <div class="spinner-grow" style="練習" role="status">
+  <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
 <h2>Buttons</h2>
 
-<p>在按鈕中加入讀取的視覺效果</p>
+<p> 在按鈕中加入讀取的視覺效果 </p>
 
 <div class="demo">
   <button class="btn btn-primary" type="button" disabled>
-    <!-- <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> -->
+    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
     <span class="visually-hidden">Loading...</span>
   </button>
   <button class="btn btn-primary" type="button" disabled>
-    <!-- <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> -->
+    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
     Loading...
   </button>
 </div>
 
 <div class="demo">
   <button class="btn btn-primary" type="button" disabled>
-    <!-- <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> -->
+    <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
     <span class="visually-hidden">Loading...</span>
   </button>
   <button class="btn btn-primary" type="button" disabled>
-    <!-- <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> -->
+    <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
     Loading...
   </button>
 </div>
@@ -325,7 +326,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -338,7 +339,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -366,7 +367,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
